--- a/css/contact.css
+++ b/css/contact.css
@@ -138,6 +138,19 @@
     color: lightseagreen;
 }
 
+.Form_valid{
+    padding-top: 20px;
+    margin-top: 50px;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-bottom: 30px;
+    background-color: lightcyan;
+}
+#error1,#error2,#error3,#error4{
+    color: brown;
+    padding-top: 10px;
+}
+
 
 /***********media query for Tablet************/
 
